--- a/module2_solution/CSS/style.css
+++ b/module2_solution/CSS/style.css
@@ -34,7 +34,7 @@ section p{
 	background-color: #ffccff;
 	color: #000;
 	position: relative;
-    margin:1%;
+    margin:2% 1% 3% 1%;
 	box-sizing: border-box;
 	padding: 10px;
 }
