--- a/module2_solution/CSS/style.css
+++ b/module2_solution/CSS/style.css
@@ -20,6 +20,7 @@ section h1{
 	border: 1px solid #000;
 	width:100px;
 	height:30px;
+   text-align: center;
 	position: absolute;
     top:0;
     right: 0;
